# learn_project

./: .gitignore  CMakeLists.txt  README.md  main.c  test.txt
include/: app.h  logger.h
src/app/: app.c
src/utils/: logger.c
